--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,9 @@
 .App-intro {
   font-size: large;
 }
+.auth-box{
+  margin-top: 10%;
+}
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
